<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageButton
        android:id="@+id/bsearch"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/search"
        android:src="@drawable/searchicon" />

    <ImageButton
        android:id="@+id/bfoodHistory"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/foodHistoryString"
        android:src="@drawable/foodhistory" />

    <ImageButton
        android:id="@+id/bweightTracker"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="155dp"
        android:contentDescription="@string/weightTrackerString"
        android:src="@drawable/scale" />

    <ImageButton
        android:id="@+id/brecipes"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="155dp"
        android:contentDescription="@string/recipesString"
        android:src="@drawable/recipes" />

    <ImageButton
        android:id="@+id/bloginRegister"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="295dp"
        android:contentDescription="@string/loginRegisterString"
        android:src="@drawable/loginregister" />

    <ImageButton
        android:id="@+id/babout"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="295dp"
        android:contentDescription="@string/aboutString"
        android:src="@drawable/about" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/bsearch"
        android:layout_alignLeft="@+id/bsearch"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="14dp"
        android:text="Search"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/bweightTracker"
        android:text="Weight Tracker"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/babout"
        android:layout_alignRight="@+id/babout"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="14dp"
        android:text="About"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignTop="@+id/brecipes"
        android:layout_marginRight="17dp"
        android:text="Recipes"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignTop="@+id/bfoodHistory"
        android:text="Profile"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/textView3"
        android:layout_marginBottom="23dp"
        android:text="Login"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>